# wlip

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  meson.build
src/: alloc.c  alloc.h  array.c  array.h  base64.c  base64.h  clipboard.c  clipboard.h  config.c  config.h  config_base.c  config_base.h  database.c  database.h  errors.c  errors.h  event.c  event.h  hashtable.c  hashtable.h  ipc_client.c  ipc_client.h  json_util.c  json_util.h  log.c  log.h  loop.c  loop.h  main.c  meson.build  ringbuffer.c  ringbuffer.h  server.c  server.h  server_api.c  server_api.h  sha256.c  util.c  util.h  version.h.in  (+5 more)
src/cli/: main.c  meson.build
src/client/: alloc.c  alloc.h  ipc_client.c  ipc_client.h  meson.build
src/client/picker/: buffer.c  buffer.h  main.c  meson.build  surface.c  surface.h  wayland.c  wayland.h
src/daemon/: config.c  config.h  config_base.c  database.c  database.h  event.h  ipc.c  ipc.h  main.c  meson.build  sha256.c  sha256.h  tomlc17.c  tomlc17.h  util.c  util.h  wayland.c  wayland.h  wayland_base.c  wayland_base.h  wlip.c  wlip.h
src/daemon/protocol/: meson.build
src/gtk/: clipboard-entry.c  clipboard-entry.h  clipboard-list.c  clipboard-list.h  config.c  config.h  entry-box.c  entry-box.h  entry-content.c  entry-content.h  gui.c  gui.h  ipc-handle.c  ipc-handle.h  ipc.c  ipc.h  main.c  meson.build  resources.gresource.xml  style.css  wlipdaemon.c  wlipdaemon.h  wlipgtk.c  wlipgtk.gresource.xml  wlipgtk.h  wlipgtk.ui  wliplist.c  wliplist.h  wlipshell.c  wlipshell.h  wlipview.c  wlipview.h
src/gui/: main.c  wayland.h  wlipgui.h
src/lua/: api.c  api.h  meson.build  script.c  script.h
src/lua/api/: api_clipboard.c  api_clipboard.h  api_clipdata.c  api_clipdata.h  api_clipentry.c  api_clipentry.h  meson.build
src/protocol/: meson.build
src/sha256/: meson.build
src/src/: main.c  meson.build  util.c  util.h
test/: compositor.c  compositor.h  meson.build  test_array.c  test_clipboard.c  test_database.c  test_hashtable.c  test_loop.c  test_ringbuffer.c  test_wayland.c
test/unit/: meson.build  test_ringbuffer.c
test/unity/: meson.build
